--- a/mediaquery/media-query.css
+++ b/mediaquery/media-query.css
@@ -1,52 +1,51 @@
 @charset "UTF-8";
 
-/* Versão mobile first */
+/* Todas as demais mídias
 
-* {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.3em;
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
+Typical Device Breakpoints
+
+Pequenas telas: até 600px
+Celular: de 600px até 768px
+Tablet: 768px até 992px
+Desktop: 992 até 1200px
+
+
+*/ 
+
+@media print {
+    body {
+        background-image: url(../imgs/back-print.jpg);
+        font-family: 'Courier New', Courier, monospace;
+        text-shadow: none;
+        color: black;
+    }
+
 }
 
-body, html {
-    
-    height: 100vh;
-}
+@media screen and (min-width: 768px) and (max-width: 992px){
+    /* TABLET */
+    body {
+        background-image: url(../imgs/back-tablet.jpg);
+    }
 
-body {
-    background: black url(../imgs/back-phone.jpg) no-repeat;
-    background-size: cover;
-    background-position: center center;
-}
-
-main {
-    background-color: rgba(255, 255, 255, 0.795);
-    width: 80vw;
-    margin: auto;
-    border-radius: 10px;
-    padding: 10px;
-}
-
-h1 {
-    text-align: center;
-    color: white;
-    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.534);
-    font-size: 2em;
-}
-
-img {
-    display: block;
-    margin: auto;
+    img#phone { display: none}
+    img#tablet { display: block}
+    img#print { display: none}
+    img#pc { display: none}
+    img#tv { display: none}
     
 }
 
+@media screen and (min-width:992px) and (max-width: 1200px){
 
-img#phone { display: block}
-img#tablet { display: none}
-img#print { display: none}
-img#pc { display: none}
-img#tv { display: none}
+    body {
+        background-image: url(../imgs/back-pc.jpg);
+    }
 
+    img#phone { display: none}
+    img#tablet { display: none}
+    img#print { display: none}
+    img#pc { display: block}
+    img#tv { display: none}
 
+}
